fix(shs-6658): wrap button in a span with hs-button class instead of complex logic for buttons in views

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_vertical-button-card.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_vertical-button-card.scss
@@ -20,8 +20,7 @@
     margin-bottom: 0;
   }
 
-  a.hs-button,
-  .hs-button {
+  .hs-button a {
     width: 100%;
     font-size: hb-calculate-rems(18px);
     hyphens: auto;
@@ -72,8 +71,7 @@
       }
     }
 
-    .hs-button,
-   a.hs-button {
+    .hs-button a {
       @include hb-secondary-button;
 
       position: relative;
@@ -171,7 +169,7 @@
       }
     }
 
-    .hs-button {
+    .hs-button a {
       padding: hb-calculate-rems(4px) hb-calculate-rems(24px)
         hb-calculate-rems(6px);
       background-color: color('primary');
